--- a/tailwind.css
+++ b/tailwind.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .topmenu {
+        @apply text-sm text-gray-400 hover:text-gray-500;
+    }
+    .cta {
+        @apply inline-block w-full lg:w-auto py-2 px-6 leading-loose font-semibold rounded-l-xl rounded-t-xl transition duration-200;
+    }
+    .steps {
+        @apply mb-4 lg:mb-0 lg:mr-6 inline-flex items-center justify-center w-16 h-16 rounded text-2xl font-bold;
+    }
+    .stephead {
+        @apply mb-4 text-2xl font-bold;
+    }
+    .note {
+        @apply text-gray-500 leading-loose;
+    }
+    .suphead {
+        @apply mb-1 text-2xl font-bold;
+    }
+    h2 {
+        @apply text-4xl lg:text-5xl font-bold;
+    }
+}
